<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, RaeReplacementActivity!</string>
    <string name="app_name">RaeReplacement</string>
    <string name="SegmentLength">Segment length (min)</string>
    <string name="totalLength">Total length (min)</string>
    <string name="DefaultSegmentLength">1.0</string>
    <string name="DefaultTotalLength">5.0</string>
    <string name="StartWorkout">Start Workout</string>
    <string name="AddWorkout">Add Workout</string>
    <string name="AddPairedWorkout">Add Paired Workout</string>
</resources>
