<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/app_name"></TextView>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/AddWorkout" android:text="@string/AddWorkout"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/AddPairedWorkout" android:text="@string/AddPairedWorkout"></Button>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/SegmentLength"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberDecimal" android:text="@string/DefaultSegmentLength" android:id="@+id/SegmentLength">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/totalLength"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberDecimal" android:text="@string/DefaultTotalLength" android:id="@+id/TotalLength"></EditText>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/StartWorkout" android:text="@string/StartWorkout"></Button>
</LinearLayout>
